# embedded-command

./: Cargo.toml  README.md  ci.sh
.github/workflows/: ci.yml
cookie-cutter/: Cargo.toml
cookie-cutter/src/: encoding.rs  lib.rs  medium.rs
cookie-cutter/src/encoding/: vanilla.rs
dispatch-bundle/: Cargo.toml  README.md
dispatch-bundle/src/: lib.rs
embedded-command/: Cargo.toml
embedded-command/src/: command_buffer.rs  command_processor.rs  crc.rs  lib.rs
embedded-command/src/crc/: iter.rs
macros/: Cargo.toml
macros/src/: dispatch_bundle.rs  lib.rs
macros/src/cookie_cutter/: vanilla.rs
packit/: Cargo.toml
packit/src/: lib.rs
